@@ -133,6 +133,7 @@
             <include>**/*Test.java</include>
           </includes>
           <useModulePath>false</useModulePath>
+          <argLine>-Dnet.bytebuddy.experimental=true</argLine>
         </configuration>
       </plugin>
     </plugins>
